--- a/src/pages/Portfolio/portfolio.css
+++ b/src/pages/Portfolio/portfolio.css
@@ -18,7 +18,7 @@
     border-radius: 5px;
     background-color: #fff;
     margin: 35px;
-    alingn-items: center;
+    align-items: center;
 }
 
 .cartao img {
