--- a/src/pages/Comentario/comentarios.css
+++ b/src/pages/Comentario/comentarios.css
@@ -1,7 +1,7 @@
 .list {
     background-color: #fff;
     border-radius: 1rem;
-    padding: 70px 60px;
+    padding: 50px 60px 100px ;
     margin: 0 auto;
 }
 
