--- a/src/pages/Portfolio/portfolio.css
+++ b/src/pages/Portfolio/portfolio.css
@@ -57,12 +57,19 @@
 }
 
 .enter-repo {
-    bottom: 0;
-    margin-top: 100%;
+    text-decoration: none;
+    color: #686AAC;
+    background-color: #fff;
+    font-size: 16px;
+    padding: 2px;
+    border-radius: 10px;
+}
+
+.enter-repo:hover {
+    text-decoration: underline;
 }
 
 .titulo {
-    padding-top: 50px;
     text-align: center;
     color: #686AAC;
     font-size: 48px;
