--- a/src/pages/Sobre/sobre.css
+++ b/src/pages/Sobre/sobre.css
@@ -1,7 +1,7 @@
 .bio {
     display: flex;
     width: 50%;
-    margin: 0 auto;
+    margin: 0 auto 70px;
     padding: 50px;
     text-align: justify;
     background-color: #686AAC;
